<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnbacktwo"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="350dp"
            android:background="@drawable/botonatras"
            android:drawableStart="@drawable/atras"
            android:paddingStart="10dp"
            android:text="" />
             />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal"
        tools:ignore="MissingConstraints">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:src="@drawable/logogenerico2"
            android:layout_marginTop="60dp"
            />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/welcome_back"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/tvemail"
            android:background="@drawable/edithtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="50px"
            android:layout_marginBottom="20px"
            android:drawableStart="@drawable/icotres"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:padding="20dp"
            />


        <EditText
            android:id="@+id/tvpassword"
            android:background="@drawable/edithtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="20px"
            android:layout_marginBottom="20px"
            android:drawableStart="@drawable/icocuatro"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:padding="20dp"
            android:inputType="textPassword"
            />


        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/grismedio"
            android:textSize="14sp"
            android:gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp" />


        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/verde"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:textStyle="bold"
            android:text="@string/login"
            android:textSize="18dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:layout_marginTop="20dp"
            android:textColor="#888888" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            android:gravity="center">

            <ImageButton
                android:layout_width="60dp"
                android:layout_height="60dp"

                android:background="@null"
                android:contentDescription="@string/google_login"
                android:scaleType="centerCrop"/>

            <Space
                android:layout_width="24dp"
                android:layout_height="wrap_content" />

            <ImageButton
                android:layout_width="60dp"
                android:layout_height="60dp"

                android:background="@null"
                android:contentDescription="@string/facebook_login"
                android:scaleType="centerCrop"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account_yet"
                android:textColor="#888888"
                android:layout_marginStart="70dp"
                android:layout_marginTop="100dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="#0064D6"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginTop="100dp"
                android:layout_marginStart="3dp"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>