<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:src="@drawable/logo"
            android:layout_marginTop="60dp"
            />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_marginTop="20dp"
            android:text="@string/Registrase"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextText"
            android:background="@drawable/edithtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="50px"
            android:layout_marginBottom="20px"
            android:drawableStart="@drawable/icouno"
            android:drawablePadding="10dp"
            android:layout_marginHorizontal="15dp"
            android:hint="@string/Nombre"
            android:padding="20dp"
             />

        <EditText
            android:id="@+id/editTextText2"
            android:background="@drawable/edithtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="20px"
            android:layout_marginBottom="20px"
            android:drawableStart="@drawable/icodos"
            android:drawablePadding="10dp"
            android:layout_marginHorizontal="15dp"
            android:hint="@string/Telefono"
            android:padding="20dp" />

        <EditText
            android:id="@+id/editTextText3"
            android:background="@drawable/edithtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="20px"
            android:layout_marginBottom="20px"
            android:layout_marginHorizontal="15dp"
            android:drawableStart="@drawable/icotres"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:padding="20dp" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:background="@drawable/edithtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="20px"
            android:layout_marginBottom="20px"
            android:layout_marginHorizontal="15dp"
            android:drawableStart="@drawable/icocuatro"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:padding="20dp"
            android:inputType="textPassword"/>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:layout_marginTop="10px"
            android:layout_marginBottom="10px"
            android:layout_marginStart="10dp"
            android:text="@string/terminoscondiciones"
            android:textColor="@color/grismedio"
            />

        <Button
            android:id="@+id/Next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/azulclaro"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20px"
            android:padding="15dp"
            android:textStyle="bold"
            android:text="@string/next"
            android:textSize="18dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="110dp"
                android:layout_marginTop="5dp"
                android:text="@string/already"
                android:textColor="#888888"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvLogIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/log"
                android:textColor="#0064D6"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>