<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verde1"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnbackfour"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/botonatras"
            android:drawableStart="@drawable/atras"
            android:paddingStart="10dp"
            />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/reset"
            android:textColor="@color/black"

            android:textSize="25dp"
            android:textStyle="bold"
            android:layout_marginStart="40dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="288dp"
            android:layout_marginTop="80dp"
            android:src="@drawable/logo"
            android:layout_marginHorizontal="20dp"/>

        <EditText
            android:id="@+id/editTextText"
            android:background="@drawable/edithtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="50px"
            android:layout_marginBottom="20px"
            android:layout_marginHorizontal="15dp"
            android:drawableStart="@drawable/icotres"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:padding="20dp"
            android:inputType="textPassword"
            />

        <EditText
            android:id="@+id/tvconfirmpassword"
            android:background="@drawable/edithtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20px"
            android:layout_marginHorizontal="15dp"
            android:drawableStart="@drawable/icocuatro"
            android:drawablePadding="10dp"

            android:hint="@string/confirmpassword"
            android:padding="20dp"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/Next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/verde"
            android:layout_marginTop="30dp"
            android:padding="15dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginHorizontal="20dp"
            android:text="@string/coninue"
            android:textSize="18dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>