<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF"
        android:padding="16dp"
        tools:layout_editor_absoluteX="197dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginTop="20dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnbacktree"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="350dp"
                    android:background="@drawable/botonatras"
                    android:drawableStart="@drawable/atras"
                    android:paddingStart="10dp"
                    android:text="" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/verification"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/illustration"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/verification" />


            <EditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edithtext"
                android:drawableStart="@drawable/icotres"
                android:drawablePadding="10dp"
                android:hint="@string/as"
                android:inputType="textEmailAddress"
                android:padding="20dp" />


            <Button
                android:id="@+id/btnSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/verde"
                android:layout_marginTop="30dp"
                android:padding="15dp"
                android:textStyle="bold"
                android:text="@string/send"
                android:textSize="18dp"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>